--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,13 @@ readme = "README.md"
 packages = [{ include = "ipykernel_logging" }]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 structlog = "^22.1.0"
 
-
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
-isort = "^5.12.0"
-black = "^23.3.0"
+black = ">=22.12,<24.0"
+flake8 = "^5.0.4"
+isort = "^5.11.4"
 
 [build-system]
 requires = ["poetry-core"]
